--- a/api/frontend/package.json
+++ b/api/frontend/package.json
@@ -9,15 +9,18 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@mdi/font": "6.2.95",
     "axios": "^1.6.8",
     "core-js": "^3.34.0",
     "roboto-fontface": "*",
+    "vee-validate": "^4.12.6",
     "vue": "^3.4.21",
     "vuetify": "^3.5.8",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/types": "^7.24.0",
