--- a/api/frontend/package.json
+++ b/api/frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --host 0.0.0.0",
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
