--- a/K8S/_pgsql-depl.yaml
+++ b/K8S/_pgsql-depl.yaml
@@ -34,7 +34,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: pgsql-clutsterip-srv # internal endpoint
+  name: pgsql-clusterip-srv # internal endpoint
 spec:
   type: ClusterIP
   selector:
