--- a/K8S/np-srv.yaml
+++ b/K8S/np-srv.yaml
@@ -14,3 +14,35 @@ spec:
       nodePort: 30007
   selector:
     app: postgres
+---
+# exposes our vue-frontend in local port 30005
+apiVersion: v1
+kind: Service
+metadata:
+  name: vue-frontend-np
+  labels:
+    app: vue-frontend
+spec:
+  type: NodePort
+  ports:
+    - port: 4173
+      targetPort: 4173
+      nodePort: 30005
+  selector:
+    app: vue-frontend
+---
+# exposes the backend on 30004
+apiVersion: v1
+kind: Service
+metadata:
+  name: rails-backend-np
+  labels:
+    app: rails-backend
+spec:
+  type: NodePort
+  ports:
+    - port: 3000
+      targetPort: 3000
+      nodePort: 30003
+  selector:
+    app: rails-backend
