--- a/K8S/pgsql-configmap.yaml
+++ b/K8S/pgsql-configmap.yaml
@@ -6,6 +6,6 @@ metadata:
   labels:
     app: postgres
 data:
-  POSTGRES_DB: closest-tec
+  POSTGRES_DB: whizz-prod
   POSTGRES_USER: admin
   POSTGRES_PASSWORD: paS5w0rD!
