--- a/api/config/database.yml
+++ b/api/config/database.yml
@@ -28,8 +28,10 @@ test:
   database: whizz_tests
 
 production:
+  <<: *default
   adapter: postgresql
   database: whizz-prod
-  username: root
-  password: Filipeco123!
-  host: localhost
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  host: <%= ENV['DATABASE_HOST'] %>
+  port: <%= ENV['DATABASE_PORT'] %>
