--- a/K8S/_server-depl.yaml
+++ b/K8S/_server-depl.yaml
@@ -21,6 +21,21 @@ spec:
             - name: DATABASE_PASSWORD
               value: paS5w0rD!
             - name: DATABASE_HOST
-              value: pgsql-clutsterip-srv
+              value: pgsql-clusterip-srv
             - name: DATABASE_PORT
               value: "5432"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: server-clusterip-srv
+spec:
+  type: ClusterIP
+  selector:
+    app: rails-backend
+  ports:
+    - name: rails-backend
+      protocol: TCP
+      targetPort: 3000
+      port: 3000
+
