--- a/api/config/database.yml
+++ b/api/config/database.yml
@@ -11,21 +11,40 @@ default: &default
   password: Filipeco123!
   host: localhost
 
+# local 
+#development:
+#  adapter: postgresql
+#  database: whizz
+#  username: root
+#  password: Filipeco123!
+#  host: localhost
+  
+# k8s
 development:
   adapter: postgresql
   database: whizz
-  username: root
-  password: Filipeco123!
-  host: localhost
-
-
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  host: <%= ENV['DATABASE_HOST'] %>
+  port: <%= ENV['DATABASE_PORT'] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+
+# development
+#test:
+#  <<: *default
+#  database: whizz_tests
+
 test:
   <<: *default
-  database: whizz_tests
+  adapter: postgresql
+  database: whizz-tests
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  host: <%= ENV['DATABASE_HOST'] %> 
+  port: <%= ENV['DATABASE_PORT'] %>
 
 production:
   <<: *default
